# PolyShooter

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  TC-mingw.cmake
.cache/clangd/index/: Anchor.h.F58959FAF9E15B12.idx  AssetManager.cpp.08BDAB57E8CE14EE.idx  AssetManager.h.01A1A47C0735608D.idx  AudioManager.cpp.84C52AEDD0D375A8.idx  AudioManager.h.30C13B721235751B.idx  Background.cpp.A9F21BB53A3ACEB0.idx  Background.h.1EF819734E2F1929.idx  Bullet.cpp.CE9CE762C95AA815.idx  Bullet.h.2C4EA429DA970843.idx  Color.cpp.5DF777D7D1722618.idx  Color.h.F46CC211AAFF8A39.idx  Constants.h.80D9F44F2E798B24.idx  Enemy.cpp.83CDF9AC5A08F939.idx  Enemy.h.D1EF44F4FF4F9529.idx  Entity.cpp.00DF055447E2715D.idx  Entity.h.E83B18CC722B0CF3.idx  EntityManager.cpp.7E91ED74ADBC22A3.idx  EntityManager.h.32CE10F919EBEB2B.idx  EventManager.cpp.0271B5D79C767F71.idx  EventManager.h.185CDDA589D41F08.idx  EventType.h.B552A5FF77E4C359.idx  Game.cpp.5F17F36563BE4101.idx  Game.h.866176A90375FEEE.idx  GameScene.cpp.CC4755703EAE61C1.idx  GameScene.h.3E3B8130951F71A4.idx  MenuScene.cpp.54F5F3DCF6BD833F.idx  MenuScene.h.52C6D3D88D28B168.idx  OverScene.cpp.D62B9EA173B10465.idx  OverScene.h.75EB1A2B84D7E8A1.idx  Player.cpp.6AF52966F9D9AC85.idx  Player.h.B10BAC4B58CEE65A.idx  SDL.h.7F428ECD85C5F5D5.idx  SDL_assert.h.0A893EBB256DEE88.idx  SDL_atomic.h.13C064A93BB77625.idx  SDL_audio.h.13B2CBAB67EEFB84.idx  SDL_blendmode.h.70E8CF32AFA85D4E.idx  SDL_clipboard.h.4AA176F0C229B551.idx  SDL_config.h.E9E36570929A2A2B.idx  SDL_cpuinfo.h.35E07F2BF3AAC71D.idx  SDL_endian.h.D1072F0B4B01458E.idx  (+64 more)
src/cpp/: Background.cpp  Game.cpp  Utls.cpp  main.cpp
src/cpp/Core/: Color.cpp  Timer.cpp  Vec2.cpp
src/cpp/Entities/: Bullet.cpp  Enemy.cpp  Entity.cpp  Player.cpp  Star.cpp
src/cpp/Managers/: AssetManager.cpp  AudioManager.cpp  EntityManager.cpp  EventManager.cpp  SceneManager.cpp  ScoreManager.cpp  SpawnManager.cpp
src/cpp/Scenes/: GameScene.cpp  MenuScene.cpp  OverScene.cpp
src/cpp/UI/: Text.cpp
src/header/: Background.h  Constants.h  Game.h  Utls.h
src/header/Core/: Color.h  Timer.h  Vec2.h
src/header/Entities/: Bullet.h  Enemy.h  Entity.h  Player.h  Star.h
src/header/Enums/: Anchor.h  EventType.h  SceneType.h  TextType.h
src/header/Managers/: AssetManager.h  AudioManager.h  EntityManager.h  EventManager.h  SceneManager.h  ScoreManager.h  SpawnManager.h
src/header/Scenes/: GameScene.h  MenuScene.h  OverScene.h  Scene.h
src/header/UI/: Text.h
